Sun Aug 24 12:22:15 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/encoding.h (rb_econv_substr_append): renamed from
	  rb_econv_string.
	  (rb_econv_str_convert): declared.
	  (rb_econv_substr_convert): declared.
	  (rb_econv_str_append): declared.

	* io.c (io_fwrite): use rb_econv_str_convert instead of
	  rb_econv_string.

	* transcode.c (rb_econv_substr_append): renamed from rb_econv_string.
	  (rb_econv_str_append): new function.
	  (rb_econv_substr_convert): ditto.
	  (rb_econv_str_convert): ditto.

Sun Aug 24 12:15:12 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (Net::HTTP#urlencode): str[0] returns char in 1.9.
	  Patch by Junegunn Choi [ruby-core:18368]

Sun Aug 24 12:02:39 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (rb_econv_open): return NULL on error.

Sun Aug 24 11:40:38 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/encoding.h (rb_econv_open_exc): declared.

	* transcode.c (rb_eNoConverter): new exception.
	  (rb_econv_open_exc): new function.
	  (transcode_loop): use rb_econv_open_exc.

	* io.c (make_writeconv): use rb_econv_open_exc.
	  (make_readconv): ditto.

Sun Aug 24 11:26:54 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/cgi.rb (CGI::unescapeHTML): consider ISO-8859-1.
	  [ruby-dev:35936]

Sun Aug 24 10:55:00 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/emacs_mule.c: support Emacs/Mule internal encoding.

Sun Aug 24 08:03:31 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* strftime.c (daylight, timezone): not provied as dllexport on cygwin,
	  right now.

Sun Aug 24 06:39:05 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/cgi.rb (CGI::unescapeHTML): more encoding sensible unescaping.
	  [ruby-dev:35936]

Sun Aug 24 04:23:19 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (enc_compatible_p): raise TypeError when argument is Encoding.

Sat Aug 23 23:25:47 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/cgi.rb (CGI#out): remove auto encoding conversion and set
	  LANGUAGE. [ruby-dev:35922]
